# Setting minimum required for cmake versions
cmake_minimum_required(VERSION 3.5)

# Setting minimal c++ version for work
set(CMAKE_CXX_STANDARD 14)

# Creating project
project(SandSim)

# Hidding console on windows
if (WIN32)
    set(CMAKE_CXX_FLAGS "-mwindows -static")
endif (WIN32)

# Setting to link standart libraries statickly
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")

# Add all source files (that needed) under the src directory
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp" "src/*.rc")
add_executable(${PROJECT_NAME} ${SOURCES})

# Look for a SDL3 package
find_package(SDL3 REQUIRED)

# Link to the actual SDL3 library.
target_link_libraries(${PROJECT_NAME} PRIVATE SDL3::SDL3-static)
